testsuite/tests/patsyn/should_fail/T15289.hs
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE ScopedTypeVariables #-}
module Oops where

pattern What = True :: Maybe
